--- a/index.html
+++ b/index.html
@@ -14,28 +14,17 @@
     <div class='w-full max-w-lg px-10 py-8 mx-auto'>
         <div class='max-w-md mx-auto space-y-6'>
             <div class="dropdown-menu">
-                
-                <div class="bg-white rounded-lg shadow-xl px-4 relative mt-8">
-                    <div class="py-6 flex items-center w-full hover:bg-gray-50">
-                        <a href="#" class="flex-1">
-                            <div class="text-gray-400 text-base">Zipcode</div>
-                        </a>
-                        <div>
-                            <svg width="40" height="20" viewBox="0 0 40 20" xmlns="http://www.w3.org/2000/svg">
-                                <line x1="30" y1="2" x2="40" y2="10" stroke="#9CA3AF" />
-                                <line x1="30" y1="18" x2="40" y2="10" stroke="#9CA3AF" />
-                                <line x1="20" y1="10" x2="40" y2="10" stroke="#9CA3AF" />
-                            </svg>
-                        </div>
+                    <div class="bg-white p-4 w-96 rounded-md">
+                      <h1 class="text-lg font-bold text-gray-500">Search pets by zipcode</h1>
+                      <div class="mt-5 mb-2 border-2 py-1 px-3 flex justify-between rounde-md rounded-md">
+                        <input class="flex-grow outline-none text-gray-600 focus:text-blue-600" type="number" placeholder="Enter zipcode" />
+                        <spa>
+                          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-400 hover:text-blue-400 transition duration-100 cursor-pointer" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+                          </svg>
+                        </spa>
+                      </div>
                     </div>
-                </div>
-                <!-- <div class="bg-white rounded-lg shadow-xl flex items-center px-4 py-6 cursor-pointer">
-                    <input type="text" placeholder="Juma Musa" readonly class="pointer-events-none text-base placeholder-gray-400 outline-none w-full h-full flex-1" />
-                    <svg width="20" height="10" viewBox="0 0 20 10" xmlns="http://www.w3.org/2000/svg">
-                        <line x1="0" y1="0" x2="10" y2="10" stroke="#9CA3AF" />
-                        <line x1="20" y1="0" x2="10" y2="10" stroke="#9CA3AF" />
-                    </svg>
-                </div> -->
             </div>
         </div>
     </div>
