--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
-
+<header>
+  <h1>HEADER &#128008;</h1>
+</header>
 <body>
   <div
     class='flex items-center justify-center min-h-screen from-green-100 via-green-300 to-green-500 bg-gradient-to-br'>
@@ -71,7 +73,7 @@
             </div>
           </div>
           
-
+          <p id="result"></p>
   <script src="script.js"></script>
   <script src="catfacts.js"></script>
 </body>
