--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
     <div id="modal" class="modal text-center rounded-md">
       <div class="modal-content">
-        <span class="close">&times;</span>
+        <span id="close">&times;</span>
 
         <!-- modal-header -->
         <div class="modal-header">
@@ -74,6 +74,7 @@
           </div>
           
           <p id="result"></p>
+
   <script src="script.js"></script>
   <script src="catfacts.js"></script>
 </body>
