add cat picture btn and display

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class='flex items-center justify-center min-h-screen from-green-100 via-green-300 to-green-500 bg-gradient-to-br'
     style="display: block;">
 
-<!-- <body>
+    <!-- <body>
   <header>
     <h1>FUN FACTS &#128008;</h1>
     <nav>
@@ -65,7 +65,7 @@
       <div id="modal" class="modal text-center rounded-md">
         <span id="close">&times;</span>
         <div class="modal-content">
-<!--     <div id="modal" class="modal text-center rounded-md">
+          <!--     <div id="modal" class="modal text-center rounded-md">
       <div class="modal-content">
         <div id="close">X</div> -->
 
@@ -76,7 +76,7 @@
           <!-- modal-body -->
           <div class="modal-body">
             <p id="result" class="display-animal-fact"></p>
-<!--             <form>
+            <!--             <form>
               <div class="form-group">
                 <label for="animal_type">Animal Type</label>
                 <input type="text" class="form-control" id="animal_type"><br>
@@ -96,6 +96,13 @@
             </div> -->
           </div>
         </div>
+      </div>
+    </div>
+    <div>
+      <div class="picture-container">
+        <button id="btn" class="picture-btn">Cat Picture</button>
+
+        <div id="display"></div>
       </div>
     </div>
     <script src="script.js"></script>
