--- a/index.html
+++ b/index.html
@@ -57,11 +57,14 @@
             id="fun-fact-btn">
             Get Facts
           </button>
+          <button type="button" class="text-center bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" id="clear-history">Clear History
 
+          </button>
         </div>
       </div>
     </div>
     <div>
+      <form id="history"></form>
       <div id="modal" class="modal text-center rounded-md">
         <span id="close">&times;</span>
         <div class="modal-content">
