local storage pt1

--- a/Main-Page.html
+++ b/Main-Page.html
@@ -24,7 +24,14 @@
             </p>
           </div>
 
-          
+          <button>click me</button>
+
+          <form action="/action_page.php">
+            <label for="cattext">Leave a Comment about our cats!:</label>
+            <input type="text" id="catcomment" name="catinput"><br><br>
+
+
+
       
           <div class="mt-10">
             <dl class="space-y-10 md:space-y-0 md:grid md:grid-cols-2 md:gap-x-8 md:gap-y-10">
