--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
 </head>
 
 <header>
-  <h1>Fun facts &#128008;</h1>
+  <h1>FUN FACTS &#128008;</h1>
+  <nav>
+
+  <ul>
+    <li> <a href="#facts-box">Cat Facts</a></li>
+    <li> <a href="#display">Cat Photo Generator</a></li>
+  </ul>
+  </nav>
 </header>
 
 <body>
   <div class='flex items-center justify-center min-h-screen from-green-100 via-green-300 to-green-500 bg-gradient-to-br'
-    style="display: block;">
+    style="display: block;" id="background">
 
     <!-- <body>
   <header>
