--- a/index.html
+++ b/index.html
@@ -5,57 +5,88 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pet Adoption</title>
+  <title>Project1 Animal facts and cat picture</title>
   <!-- tailwind CSS link -->
   <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <header>
-  <h1>HEADER &#128008;</h1>
+  <h1>FUN FACTS &#128008;</h1>
+  <nav>
+
+  <ul>
+    <li> <a href="#facts-box">Cat Facts</a></li>
+    <li> <a href="#display">Cat Photo Generator</a></li>
+  </ul>
+  </nav>
 </header>
+
 <body>
+  <div class='flex items-center justify-center min-h-screen from-green-100 via-green-300 to-green-500 bg-gradient-to-br'
+    style="display: block;" id="background">
+
+    <!-- <body>
+  <header>
+    <h1>FUN FACTS &#128008;</h1>
+    <nav>
+      <ul>
+        <li><a href="facts-box">Cat Facts</a></li>
+        <li><a href="">Picture Generator</a></li>
+  
+      </ul>
+    </nav>
+  </header>
   <div
-    class='flex items-center justify-center min-h-screen from-green-100 via-green-300 to-green-500 bg-gradient-to-br'>
+    class='flex items-center justify-center min-h-screen from-green-100 via-green-300 to-green-500 bg-gradient-to-br'> -->
     <div class='w-full max-w-lg px-10 py-8 mx-auto'>
       <div class='max-w-md mx-auto space-y-6'>
-
-        <div class="bg-white p-4 w-96 rounded-md">
-          <h1 class="text-lg font-bold text-gray-500">Search pets by zipcode</h1>
-          <div class="mt-5 mb-2 border-2 py-1 px-3 flex justify-between rounde-md rounded-md">
-            <input class="flex-grow outline-none text-gray-600 focus:text-blue-600" type="number" id="search"
-              placeholder="Enter zipcode" />
-            <spa>
-              <svg xmlns="http://www.w3.org/2000/svg"
-                class="h-6 w-6 text-gray-400 hover:text-blue-400 transition duration-100 cursor-pointer" fill="none"
-                viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                  d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
-              </svg>
-            </spa>
-          </div>
-        </div>
-        <div class="bg-white p-4 w-96 rounded-md">
-          <h1 class="text-center text-lg font-bold text-gray-500">Cat fun facts</h1>
+        <div class="bg-white p-4 w-96 rounded-md" id="facts-box">
+          <h1 class="text-center text-lg font-bold text-gray-500">Animal fun facts</h1>
           <p id="display-fun-fact" class="display-the-fact"></p>
+          <form id="fun-fact-form">
+            <div class="form-group">
+              <div class="display-funfact-box">
+                <label for="animal_type">Animal Type</label>
+                <input type="text" class="form-control" id="animal_type">
+                <small id="small" class="form-text text-muted">Options: Cat, Dog, Horse & Snail</small>
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="display-funfact-box">
+                <label for="num_facts">Number of Facts</label>
+                <input type="number" class="form-control" id="num_facts">
+                <small id="small" class="form-text text-muted">Max: 5</small>
+              </div>
+            </div>
+          </form>
           <button class="text-center bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full"
             id="fun-fact-btn">
             Get Facts
           </button>
+          <button type="button" class="text-center bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" id="clear-history">Clear History
 
+          </button>
         </div>
       </div>
     </div>
-    <div id="modal" class="modal text-center rounded-md">
-      <div class="modal-content">
+    <div>
+      <form id="history"></form>
+      <div id="modal" class="modal text-center rounded-md">
         <span id="close">&times;</span>
+        <div class="modal-content">
+          <!--     <div id="modal" class="modal text-center rounded-md">
+      <div class="modal-content">
+        <div id="close">X</div> -->
 
-        <!-- modal-header -->
-        <div class="modal-header">
-          <h2>Cat Facts</h2>
+          <!-- modal-header -->
+          <div class="modal-header">
+            <h2>Animal Fun Facts</h2>
           </div>
           <!-- modal-body -->
           <div class="modal-body">
-            <form>
+            <p id="result" class="display-animal-fact"></p>
+            <!--             <form>
               <div class="form-group">
                 <label for="animal_type">Animal Type</label>
                 <input type="text" class="form-control" id="animal_type"><br>
@@ -70,13 +101,22 @@
             </form>
             <div class="modal-footer">
               <button type="button" class="btn btn-primary rounde-md" id="generate">Generate</button>
-            </div>
-          </div>
-          
-          <p id="result"></p>
+              <button type="button" class="btn btn-primary rounde-md" id="clear-history">Clear History</button>
 
-  <script src="script.js"></script>
-  <script src="catfacts.js"></script>
+            </div> -->
+          </div>
+        </div>
+      </div>
+    </div>
+    <div>
+      <div class="picture-container">
+        <button id="btn" class="picture-btn">Cat Picture</button>
+
+        <div id="display"></div>
+      </div>
+    </div>
+    <script src="script.js"></script>
+    <script src="catfacts.js"></script>
 </body>
 
 </html>
