--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     class='flex items-center justify-center min-h-screen from-green-100 via-green-300 to-green-500 bg-gradient-to-br'> -->
     <div class='w-full max-w-lg px-10 py-8 mx-auto'>
       <div class='max-w-md mx-auto space-y-6'>
-        <div class="bg-white p-4 w-96 rounded-md" id="facts-box">
-          <h1 class="text-center text-lg font-bold text-gray-500">Animal fun facts</h1>
+        <div class="bg-black p-4 w-96 rounded-md" id="facts-box">
+          <h1 class="text-center text-lg font-bold text-yello-500">Animal fun facts</h1>
           <p id="display-fun-fact" class="display-the-fact"></p>
           <form id="fun-fact-form">
             <div class="form-group">
@@ -60,11 +60,11 @@
               </div>
             </div>
           </form>
-          <button class="text-center bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full"
+          <button class="text-center bg-yellow-500 hover:bg-blue-700 text-black font-bold py-2 px-4 rounded-full"
             id="fun-fact-btn">
             Get Facts
           </button>
-          <button type="button" class="text-center bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" id="clear-history">Clear History
+          <button type="button" class="text-center bg-yellow-500 hover:bg-blue-700 text-black font-bold py-2 px-4 rounded-full" id="clear-history">Clear History
 
           </button>
         </div>
