css html changes

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <div class='w-full max-w-lg px-10 py-8 mx-auto'>
       <div class='max-w-md mx-auto space-y-6'>
         <!-- Fun facts box-->
-        <div class="bg-white p-4 w-96 rounded-md" id="facts-box">
-          <h1 class="text-center text-lg font-bold text-gray-500">Animal fun facts</h1>
+        <div class="bg-black p-4 w-96 rounded-md" id="facts-box">
+          <h1 class="text-center text-lg font-bold text-yellow-500">Animal fun facts</h1>
           <p id="display-fun-fact" class="display-the-fact"></p>
           <form id="fun-fact-form">
             <!-- Animal type form-->
@@ -52,12 +52,12 @@
             </div>
           </form>
           <!-- Get Facts button-->
-          <button class="text-center bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full"
+          <button class="text-center bg-yellow-500 hover:bg-blue-700 text-black font-bold py-2 px-4 rounded-full"
             id="fun-fact-btn">
             Get Facts
           </button>
           <!-- Clear History button-->
-          <button type="button" class="text-center bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" id="clear-history">Clear History
+          <button type="button" class="text-center bg-yellow-500 hover:bg-blue-700 text-black font-bold py-2 px-4 rounded-full" id="clear-history">Clear History
 
           </button>
         </div>
